--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<span class="keyword">while</span> (mutluMu == false) {<br />
 				<span class="placeholder"/>i.destek(u);<br />
 				<span class="placeholder"/><span class="comments">// Kötü günlerimizde birbirimizi destekledik.</span><br />
-				<span class="placeholder"/><span class="comments">// (Senleyken Mutsuzluk zor olsada)...</span><br />
+				<span class="placeholder"/><span class="comments">// (Senleyken Mutsuzluk zor olsada...)</span><br />
 				<span class="placeholder"/>mutluMu = u.mutlu();<br />
 				<span class="placeholder"/>u.mutlu = i.mutlu();<br />
 				}<br />
