--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<span class="space"/><span class="comments">*/</span><br />
 				ben i = <span class="keyword">new</span> Erkek(<span class="string">"Batuhan"</span>);<br />
 				sen u = <span class="keyword">new</span> Kız(<span class="string">"Tuana"</span>);<br />
-				<span class="comments">// 16 Eylül, 2024, Çıkmaya başladığımız gün. </span><br />
+				<span class="comments">// 16Ağustos, 2024, Çıkmaya başladığımız gün. </span><br />
 				i.seviyor(u);<br />
 				<span class="comments">// Dizilerde olucak bir şekilde tanıştık aslında,</span><br />
 				tanisma();<br />
